# swagger-output.json
@@ -13,28 +13,279 @@
   "paths": {
     "/users/": {
       "get": {
-        "description": "",
+        "tags": [
+          "User"
+        ],
+        "description": "取得所有使用者",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "成功取得所有使用者",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "users": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "_id": {
+                        "type": "string",
+                        "example": "62a888716ff45e8490b4ac6e"
+                      },
+                      "email": {
+                        "type": "string",
+                        "example": "example@gmail.com"
+                      },
+                      "name": {
+                        "type": "string",
+                        "example": "Steve Jobs"
+                      },
+                      "createdAt": {
+                        "type": "string",
+                        "example": "2022-06-14T13:09:05.265Z"
+                      }
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "User"
+        ],
+        "description": "刪除所有使用者",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "成功取得所有使用者",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "users": {
+                  "type": "array",
+                  "example": [],
+                  "items": {}
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
       }
     },
     "/users/sign_up": {
       "post": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
+        "tags": [
+          "User"
+        ],
+        "description": "使用者註冊",
+        "parameters": [
+          {
+            "name": "200",
+            "in": "body",
+            "description": "資料格式",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Steve Jobs"
+                },
+                "email": {
+                  "type": "string",
+                  "example": "example@gmail.com"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "qwe12345"
+                },
+                "confirmPassword": {
+                  "type": "string",
+                  "example": "qwe12345"
+                }
+              },
+              "required": [
+                "name",
+                "email",
+                "password",
+                "confirmPassword"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功取得所有使用者",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "user": {
+                  "type": "object",
+                  "properties": {
+                    "email": {
+                      "type": "string",
+                      "example": "example@gmail.com"
+                    },
+                    "name": {
+                      "type": "string",
+                      "example": "Steve Jobs"
+                    },
+                    "_id": {
+                      "type": "string",
+                      "example": "62a88dac16546e18ff6321c3"
+                    },
+                    "createdAt": {
+                      "type": "string",
+                      "example": "2022-06-14T13:31:24.530Z"
+                    }
+                  }
+                },
+                "token": {
+                  "type": "string",
+                  "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjYyYTg4ZGFjMTY1NDZlMThmZjYzMjFjMyIsImlhdCI6MTY1NTIxMzQ4NCwiZXhwIjoxNjU3ODA1NDg0fQ.thfgxDe3oj0x6MaBPNtGXy1b8gHLpKTyzepfca0oLGg"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "電子信箱重複註冊",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "false"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "該電子信箱已註冊！"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
       }
     },
     "/users/sign_in": {
       "post": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
+        "tags": [
+          "User"
+        ],
+        "description": "使用者登入",
+        "parameters": [
+          {
+            "name": "200",
+            "in": "body",
+            "description": "資料格式",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "type": "string",
+                  "example": "gubug777@gmail.com"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "qwe12345"
+                }
+              },
+              "required": [
+                "email",
+                "password"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功取得所有使用者",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "user": {
+                  "type": "object",
+                  "properties": {
+                    "_id": {
+                      "type": "string",
+                      "example": "62a88dac16546e18ff6321c3"
+                    },
+                    "email": {
+                      "type": "string",
+                      "example": "example@gmail.com"
+                    },
+                    "name": {
+                      "type": "string",
+                      "example": "Steve Jobs"
+                    },
+                    "createdAt": {
+                      "type": "string",
+                      "example": "2022-06-14T13:31:24.530Z"
+                    }
+                  }
+                },
+                "token": {
+                  "type": "string",
+                  "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjYyYTg4ZGFjMTY1NDZlMThmZjYzMjFjMyIsImlhdCI6MTY1NTIxMzk5MywiZXhwIjoxNjU3ODA1OTkzfQ.jQyDN4jZbUcVD9PZ6dT7Sw9zQn_8Kh81LdPSv3gCqSw"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "未註冊使用者",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "false"
+                },
+                "message": {
+                  "type": "string",
+                  "example": "找不到該使用者！"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
       }
     }
   }
